--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -2,6 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b1f7daa8-b570-47ce-8963-5457fd60c59f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"KNN method in supervisied learing\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4228b887-e1e6-4e47-a7de-74ff11f81fca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder,MinMaxScaler,StandardScaler,OneHotEncoder,FunctionTransformer\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import accuracy_score,r2_score,mean_squared_error\n",
+    "from sklearn.linear_model import LogisticRegression,LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "df = pd.read_csv(r\"C:\\Users\\Lenovo\\Desktop\\gaurav\\covid_toy.csv\")\n",
+    "df.head()\n",
+    "df[\"fever\"].fillna(df[\"fever\"].mean(),inplace=True)\n",
+    "l = LabelEncoder()\n",
+    "df[\"gender\"] = l.fit_transform(df[\"gender\"])\n",
+    "df[\"cough\"] = l.fit_transform(df[\"cough\"])\n",
+    "df[\"city\"] = l.fit_transform(df[\"city\"])\n",
+    "df[\"has_covid\"] = l.fit_transform(df[\"has_covid\"])\n",
+    "X = df.drop(\"has_covid\",axis=1)\n",
+    "y = df[\"has_covid\"]\n",
+    "df.head()\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a29c34e2-30fe-43e3-9664-508984e00f77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = StandardScaler()\n",
+    "X_train = s.fit_transform(X_train)\n",
+    "X_test = s.fit_transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b71201a2-b423-4c45-851b-2809abf80b4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn = KNeighborsClassifier(n_neighbors=3)\n",
+    "knn.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39624569-d7d7-4605-a834-021ae702de61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = knn.predict(X_test)\n",
+    "accurac = accuracy_score(y_test,y_pred)\n",
+    "print(f\"accuracy:{accuracy_score(y_test,y_pred) * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "id": "b67b36b2-6ed0-4be3-a004-dc20026726ab",
    "metadata": {},
